--- a/views/req_demo.html
+++ b/views/req_demo.html
@@ -25,7 +25,7 @@
                 <div class="navbar-inside-custom">
                     <nav class="navbar navbar-expand-lg ">
                         <div class="container-fluid">
-                            <a class="navbar-brand" href="#"><img src="../src/img/logo.png" class="img-logo img-fluid"
+                            <a class="navbar-brand" href="../index.html"><img src="../src/img/logo.png" class="img-logo img-fluid"
                                     alt="" srcset=""></a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false"
@@ -35,23 +35,17 @@
                             <div class="collapse navbar-collapse items-nav" id="navbarText">
                                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                                     <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="../index.html">HOME</a>
+                                        <a class="nav-link" aria-current="page" href="../index.html">HOME</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">SOLUCIONES</a>
+                                        <a class="nav-link" href="../views/projects.html">PROYECTOS</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">PROYECTOS</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">SOBRE NOSOTROS</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">CONTÁCTO</a>
+                                        <a class="nav-link" href="#">INFORMACIÓN</a>
                                     </li>
                                 </ul>
                                 <span class="navbar-text">
-                                    <button class="btn-demo">Solicitar demo</button>
+                                    <button class="btn-demo">Regresar</button>
                                 </span>
                             </div>
                         </div>
@@ -147,34 +141,37 @@
                                 </div>
                                 <div class="text-demo-side">
                                     <h4 class="title-demo-side">Conecta con nosotros</h4>
-                                    <p class="text-demo-side">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                        Quia, Natus doloremque, quia dicta explicabo voluptatibus illum iste aspernatur
-                                        nihil minus dolores.</p>
+                                    <p class="text-demo-side"><span class="fw-bold">Descubre cómo podemos ayudarte a transformar tus ideas en resultados.</span> Nuestro equipo está listo para escucharte, 
+                                        entender tus necesidades y brindarte soluciones efectivas que impulsen tu crecimiento.
+                                    </p>
                                 </div>
                             </div>
-                            <div class="item-demo mt-3">
+                            <div class="item-demo mt-2">
                                 <div class="item-demo">
                                     <div class="icon-demo">
                                         <i class='bx  bx-shield'></i>
                                     </div>
                                     <div class="text-demo-side">
                                         <h4 class="title-demo-side">Asegura tus datos</h4>
-                                        <p class="text-demo-side">Lorem, ipsum dolor sit amet consectetur adipisicing
-                                            elit. Quia, Natus doloremque, quia dicta explicabo voluptatibus illum iste
-                                            aspernatur nihil minus dolores.</p>
+                                        <p class="text-demo-side"><span class="fw-bold text-underline">Protege lo que más importa.</span> Implementamos prácticas de seguridad avanzadas para mantener tu información a salvo, 
+                                            <span class="fw-bold">Con nosotros, tu tranquilidad está asegurada mientras tu negocio avanza con confianza.</span>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="item-demo mt-3">
+                            <div class="item-demo mt-2">
                                 <div class="item-demo">
                                     <div class="icon-demo">
                                         <i class='bx  bx-chart-network'></i>
                                     </div>
                                     <div class="text-demo-side">
                                         <h4 class="title-demo-side">Aumenta la productividad</h4>
-                                        <p class="text-demo-side">Lorem, ipsum dolor sit amet consectetur adipisicing
-                                            elit. Quia, Natus doloremque, quia dicta explicabo voluptatibus illum iste
-                                            aspernatur nihil minus dolores.</p>
+                                        <p class="text-demo-side">
+                                            Con nuestras herramientas y soluciones digitales, podrás enfocarte en lo que realmente importa, 
+                                            <span class="fw-bold">
+                                                eliminando procesos manuales y tareas repetitivas. 
+                                            </span>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
