--- a/views/projects.html
+++ b/views/projects.html
@@ -40,7 +40,7 @@
                                         <a class="nav-link active" href="#">PROYECTOS</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">INFORMACIÓN</a>
+                                        <a class="nav-link" href="#info">INFORMACIÓN</a>
                                     </li>
                                 </ul>
                                 <span class="navbar-text">
@@ -117,7 +117,7 @@
 
     <div class="info-extra">
         <div class="container">
-            <div class="title">
+            <div class="title" id="info">
                 <h2 class="title-demo">¿Buscabas algo más?</h2>
                 <p class="text-demo">Explora más opciones y encuentra lo que buscas. Nuestro sitio web ofrece una amplia
                     gama de recursos, productos y soluciones para satisfacer tus necesidades.</p>
