--- a/views/req_demo.html
+++ b/views/req_demo.html
@@ -41,11 +41,13 @@
                                         <a class="nav-link" href="../views/projects.html">PROYECTOS</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">INFORMACIÓN</a>
+                                        <a class="nav-link" href="#info">INFORMACIÓN</a>
                                     </li>
                                 </ul>
                                 <span class="navbar-text">
-                                    <button class="btn-demo">Regresar</button>
+                                    <a href="../index.html">
+                                        <button class="btn-demo">Regresar</button>
+                                    </a>
                                 </span>
                             </div>
                         </div>
@@ -245,7 +247,7 @@
     </div>
     <div class="info-extra">
         <div class="container">
-            <div class="title">
+            <div class="title" id="info">
                 <h2 class="title-demo">¿Buscabas algo más?</h2>
                 <p class="text-demo">Explora más opciones y encuentra lo que buscas. Nuestro sitio web ofrece una amplia
                     gama de recursos, productos y soluciones para satisfacer tus necesidades.</p>
