Finish page V.1 no V0

--- a/css/demo.css
+++ b/css/demo.css
@@ -436,7 +436,7 @@ body {
 .footer-final {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     margin-top: 10px;
     text-decoration: none;
     font-family: "Inter", sans-serif;
