--- a/css/projects.css
+++ b/css/projects.css
@@ -266,7 +266,7 @@ iframe {
 .footer-final {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     margin-top: 10px;
     text-decoration: none;
     font-family: "Inter", sans-serif;
