--- a/css/style.css
+++ b/css/style.css
@@ -720,7 +720,7 @@ a>.btn-demo:hover {
 .footer-final {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     margin-top: 10px;
     text-decoration: none;
     font-family: "Inter", sans-serif;
